--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,36 @@
 {
   "dependencies": {
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "^6.16.3",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.545.0",
     "morgan": "^1.10.1",
-    "prisma": "^6.16.2",
+    "multer": "^2.0.2",
+    "react-hot-toast": "^2.6.0",
     "slugify": "^1.6.6",
+    "uuid": "^13.0.0",
     "zod": "^4.1.11"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.6.2",
+    "@types/uuid": "^10.0.0",
+    "prisma": "^6.16.3",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.2"
+  },
+  "scripts": {
+    "start": "ts-node index.ts",
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn index.ts"
   }
 }
