--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "multer": "^2.0.2",
     "react-hot-toast": "^2.6.0",
     "slugify": "^1.6.6",
-    "uuid": "^13.0.0",
+    "uuid": "^8.3.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "start": "ts-node index.ts",
-    "build": "tsc",
+    "build": "tsc && cp -r ./uploads ./dist/uploads",
     "dev": "ts-node-dev --respawn index.ts"
   }
 }
