--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fontsource-variable/vazirmatn": "^5.2.8",
     "@hookform/resolvers": "^5.2.2",
     "@mui/material": "^7.3.4",
     "@tanstack/react-query": "^5.59.13",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
     "axios": "^1.12.2",
+    "iconsax-react": "^0.0.8",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "postcss": "^8.4.47",
