--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "postcss": "^8.4.47",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.3",
