--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.3",
+    "react-select": "^5.10.2",
     "tailwindcss": "^3.4.13",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
