--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.3",
     "react-select": "^5.10.2",
+    "sonner": "^2.0.7",
     "tailwindcss": "^3.4.13",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
