--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "multer": "^2.0.2",
     "react-hot-toast": "^2.6.0",
     "slugify": "^1.6.6",
+    "transliteration": "^2.3.5",
     "uuid": "^8.3.2",
     "zod": "^4.1.11"
   },
