--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.9.3",
     "react-select": "^5.10.2",
     "sonner": "^2.0.7",
