--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
     "axios": "^1.12.2",
+    "framer-motion": "^12.23.24",
     "iconsax-react": "^0.0.8",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
