--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
     "iconsax-react": "^0.0.8",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "persian-tools": "^1.0.6",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
