--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
     "axios": "^1.12.2",
+    "date-fns-jalali": "^4.1.0-0",
     "framer-motion": "^12.23.24",
     "iconsax-react": "^0.0.8",
     "js-cookie": "^3.0.5",
@@ -27,11 +28,14 @@
     "persian-tools": "^1.0.6",
     "postcss": "^8.4.47",
     "react": "19.1.0",
+    "react-date-object": "^2.1.9",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-inner-image-zoom": "^4.0.1",
+    "react-multi-date-picker": "^4.5.2",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.9.3",
     "react-select": "^5.10.2",
