--- a/backend/package.json
+++ b/backend/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc && node -e \"require('fs').mkdirSync('dist/uploads',{recursive:true})\"",
+    "build": "tsc && prisma generate && node -e \"require('fs').mkdirSync('dist/uploads',{recursive:true})\"",
     "dev": "ts-node-dev --respawn index.ts",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
