--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "cd backend && npm start"
+  },
   "devDependencies": {
     "@types/node": "^24.6.2",
     "@types/react": "^19.2.0",
