--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,7 @@
     "typescript": "^5.9.2"
   },
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "npm run build && node dist/index.js",
     "build": "tsc && prisma generate && node -e \"require('fs').mkdirSync('dist/uploads',{recursive:true})\"",
     "dev": "ts-node-dev --respawn index.ts",
     "prisma:generate": "prisma generate",
