--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "slugify": "^1.6.6",
     "transliteration": "^2.3.5",
     "uuid": "^8.3.2",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -31,8 +32,7 @@
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.2"
+    "tsx": "^4.20.6"
   },
   "scripts": {
     "start": "npm run build && node dist/index.js",
